--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Rohan Krishnan's data science and analytics portfolio.">
     <title>Rohan Krishnan</title>
     <link rel="icon" href="../assets/images/favicon.ico">
     <link rel="stylesheet" href="../assets/css/styles.css">
