--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
     </section>
 
 
-    <!-- EXPERIENCE -->
+    <!-- SECTION: SKILLS -->
     <section id="skills">
         <p class="section__text__p1">Explore My</p>
         <h1 class="title">Skills</h1>
@@ -158,8 +158,11 @@
           <div class="about-containers">
             <div class="details-container">
               <h2 class="experience-sub-title">Data-Centric</h2>
-              <p>Through schoolwork, personal and service projects, and professional experience as both a 
-                freelancer and as an intern, I've developed actionable skills with many web tools, technologies, and concepts.</p>
+              <p>Through my schoolwork, professional and research experiences, and my personal projects, 
+                I've developed actionable, industry-ready skills in many data science & analytics tools, 
+                technologies, and concepts.</p>
+
+
               <!-- <div class="article-container">
                 <p>Through schoolwork, personal and service projects, and professional experience as both a 
                     freelancer and as an intern, I've developed actionable skills with many web tools, technologies, and concepts.</p>
@@ -234,7 +237,7 @@
 
 
             <div class="details-container">
-              <h2 class="experience-sub-title">Frontend Development</h2>
+              <h2 class="experience-sub-title">Data Skills</h2>
               <div class="article-container">
                 <article>
                   <img
